--- a/package.json
+++ b/package.json
@@ -12,33 +12,30 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.7.4",
-    "leaflet": "^1.9.4",
-    "lucide-react": "^0.487.0",
-    "next": "15.2.4",
+    "lucide-react": "^0.507.0",
+    "motion": "^12.10.0",
+    "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fontawesome": "^1.7.1",
     "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0",
-    "react-simple-typewriter": "^5.0.1",
-    "tailwind-merge": "^3.2.0",
-    "tailwind-variants": "^1.0.0",
-    "tw-animate-css": "^1.2.5"
+    "react-leaflet": "^5.0.0-rc.2",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "tailwindcss": "^4",
+    "eslint-config-next": "15.3.1",
+    "tailwindcss": "^4.1.5",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
